Menu Controller Support
controller can now be used to navigate menus
ui is now a prefab

--- a/Puha yaami'a/Assembly-CSharp.csproj
+++ b/Puha yaami'a/Assembly-CSharp.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Assets\CreativeSpore\SuperTilemapEditor\Scripts\Utils\TilemapDrawingUtils.cs" />
     <Compile Include="Assets\CreativeSpore\SuperTilemapEditor\Scripts\Utils\TilemapUtils.cs" />
     <Compile Include="Assets\CreativeSpore\SuperTilemapEditor\Scripts\Utils\TilemapVertexPaintUtils.cs" />
+    <Compile Include="Assets\CtrlNavigation.cs" />
     <Compile Include="Assets\FreeParallax\Scripts\FreeParallax.cs" />
     <Compile Include="Assets\FreeParallax\Scripts\FreeParallaxDemo.cs" />
     <Compile Include="Assets\Scripts\Climbable.cs" />
