--- a/Puha yaami'a/Assembly-CSharp.csproj
+++ b/Puha yaami'a/Assembly-CSharp.csproj
@@ -105,11 +105,14 @@
     <Compile Include="Assets\Scripts\CtrlNavigation.cs" />
     <Compile Include="Assets\Scripts\DialogueDisplay.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\GameManagerData.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\PauseMenu.cs" />
     <Compile Include="Assets\Scripts\PlatformCrumble.cs" />
     <Compile Include="Assets\Scripts\PlatformMove.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\SaveSystem.cs" />
     <Compile Include="Assets\Scripts\SettingsMenu.cs" />
     <Compile Include="Assets\Scripts\Wind.cs" />
     <None Include="Assets\FreeParallax\Readme.txt" />
