--- a/Puha yaami'a/Assembly-CSharp.csproj
+++ b/Puha yaami'a/Assembly-CSharp.csproj
@@ -106,6 +106,8 @@
     <Compile Include="Assets\Scripts\DialogueDisplay.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\GameManagerData.cs" />
+    <Compile Include="Assets\Scripts\JournalPlantEntry.cs" />
+    <Compile Include="Assets\Scripts\JournalPoemEntry.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\PauseMenu.cs" />
     <Compile Include="Assets\Scripts\PlatformCrumble.cs" />
