--- a/Puha yaami'a/Assembly-CSharp.csproj
+++ b/Puha yaami'a/Assembly-CSharp.csproj
@@ -101,22 +101,24 @@
     <Compile Include="Assets\CreativeSpore\SuperTilemapEditor\Scripts\Utils\TilemapVertexPaintUtils.cs" />
     <Compile Include="Assets\FreeParallax\Scripts\FreeParallax.cs" />
     <Compile Include="Assets\FreeParallax\Scripts\FreeParallaxDemo.cs" />
-    <Compile Include="Assets\Scripts\Climbable.cs" />
-    <Compile Include="Assets\Scripts\CtrlNavigation.cs" />
-    <Compile Include="Assets\Scripts\DialogueDisplay.cs" />
-    <Compile Include="Assets\Scripts\GameManager.cs" />
-    <Compile Include="Assets\Scripts\GameManagerData.cs" />
-    <Compile Include="Assets\Scripts\JournalPlantEntry.cs" />
-    <Compile Include="Assets\Scripts\JournalPoemEntry.cs" />
-    <Compile Include="Assets\Scripts\LevelManager.cs" />
-    <Compile Include="Assets\Scripts\PauseMenu.cs" />
-    <Compile Include="Assets\Scripts\PlatformCrumble.cs" />
-    <Compile Include="Assets\Scripts\PlatformMove.cs" />
-    <Compile Include="Assets\Scripts\Player.cs" />
-    <Compile Include="Assets\Scripts\PlayerData.cs" />
-    <Compile Include="Assets\Scripts\SaveSystem.cs" />
-    <Compile Include="Assets\Scripts\SettingsMenu.cs" />
-    <Compile Include="Assets\Scripts\Wind.cs" />
+    <Compile Include="Assets\Scripts\Data Mangement\GameManagerData.cs" />
+    <Compile Include="Assets\Scripts\Data Mangement\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\Data Mangement\SaveSystem.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\Climbable.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\DialogueDisplay.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\JournalPlantEntry.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\JournalPoemEntry.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\LevelManager.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\PlatformCrumble.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\PlatformMove.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\Player.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\Wind.cs" />
+    <Compile Include="Assets\Scripts\UI &amp; Audio\AudioManager.cs" />
+    <Compile Include="Assets\Scripts\UI &amp; Audio\CtrlNavigation.cs" />
+    <Compile Include="Assets\Scripts\UI &amp; Audio\PauseMenu.cs" />
+    <Compile Include="Assets\Scripts\UI &amp; Audio\SettingsMenu.cs" />
+    <Compile Include="Assets\Scripts\UI &amp; Audio\Sound.cs" />
     <None Include="Assets\FreeParallax\Readme.txt" />
     <None Include="Assets\Scripts\Keybindings README.txt" />
     <None Include="Assets\CreativeSpore\SuperTilemapEditor\Extra\Tileset - Samples\Tiled - Tmx Import\license.txt" />
