Tons of UI Fixes
-All elements scaled properly so text is no longer blurry
-Font applied
-Volume slider hooked up to control volume in settings
-Backend code optimizations
-Clarity tweaks

--- a/Puha yaami'a/Assembly-CSharp.csproj
+++ b/Puha yaami'a/Assembly-CSharp.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Assets\Scripts\Game Systems\Climbable.cs" />
     <Compile Include="Assets\Scripts\Game Systems\DialogueDisplay.cs" />
     <Compile Include="Assets\Scripts\Game Systems\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Game Systems\Journal Entry.cs" />
     <Compile Include="Assets\Scripts\Game Systems\JournalItem.cs" />
     <Compile Include="Assets\Scripts\Game Systems\JournalPlantEntry.cs" />
     <Compile Include="Assets\Scripts\Game Systems\JournalPoemEntry.cs" />
