Small respawn bugfix, organization
Player no longer occasionally falls through the level when respawning

--- a/Puha yaami'a/Assembly-CSharp.csproj
+++ b/Puha yaami'a/Assembly-CSharp.csproj
@@ -107,20 +107,20 @@
     <Compile Include="Assets\Scripts\Data Mangement\JournalPage.cs" />
     <Compile Include="Assets\Scripts\Data Mangement\PlayerData.cs" />
     <Compile Include="Assets\Scripts\Data Mangement\SaveSystem.cs" />
-    <Compile Include="Assets\Scripts\Game Systems\Climbable.cs" />
     <Compile Include="Assets\Scripts\Game Systems\DialogueDisplay.cs" />
-    <Compile Include="Assets\Scripts\Game Systems\FallingRock.cs" />
-    <Compile Include="Assets\Scripts\Game Systems\FallingRocksSpawn.cs" />
     <Compile Include="Assets\Scripts\Game Systems\GameManager.cs" />
-    <Compile Include="Assets\Scripts\Game Systems\Journal Entry.cs" />
-    <Compile Include="Assets\Scripts\Game Systems\JournalItem.cs" />
-    <Compile Include="Assets\Scripts\Game Systems\JournalPlantEntry.cs" />
-    <Compile Include="Assets\Scripts\Game Systems\JournalPoemEntry.cs" />
     <Compile Include="Assets\Scripts\Game Systems\LevelManager.cs" />
-    <Compile Include="Assets\Scripts\Game Systems\PlatformCrumble.cs" />
-    <Compile Include="Assets\Scripts\Game Systems\PlatformMove.cs" />
     <Compile Include="Assets\Scripts\Game Systems\Player.cs" />
-    <Compile Include="Assets\Scripts\Game Systems\Wind.cs" />
+    <Compile Include="Assets\Scripts\Journal\Journal Entry.cs" />
+    <Compile Include="Assets\Scripts\Journal\JournalItem.cs" />
+    <Compile Include="Assets\Scripts\Journal\JournalPlantEntry.cs" />
+    <Compile Include="Assets\Scripts\Journal\JournalPoemEntry.cs" />
+    <Compile Include="Assets\Scripts\Object Behaviors\Climbable.cs" />
+    <Compile Include="Assets\Scripts\Object Behaviors\FallingRock.cs" />
+    <Compile Include="Assets\Scripts\Object Behaviors\FallingRocksSpawn.cs" />
+    <Compile Include="Assets\Scripts\Object Behaviors\PlatformCrumble.cs" />
+    <Compile Include="Assets\Scripts\Object Behaviors\PlatformMove.cs" />
+    <Compile Include="Assets\Scripts\Object Behaviors\Wind.cs" />
     <Compile Include="Assets\Scripts\UI &amp; Audio\AudioManager.cs" />
     <Compile Include="Assets\Scripts\UI &amp; Audio\CtrlNavigation.cs" />
     <Compile Include="Assets\Scripts\UI &amp; Audio\DashTimer.cs" />
